crates/kooixc/src/parser.rs
use crate::ast::{
    AgentDecl, AgentPolicy, AssignStmt, BinaryOp, Block, CapabilityDecl, EffectSpec, EnsureClause,
    EvidenceSpec, Expr, FailureAction, FailureActionArg, FailurePolicy, FailureRule, FailureValue,
    FunctionDecl, Item, LetStmt, LoopSpec, OutputField, Param, PredicateOp, PredicateValue,
    Program, RecordDecl, RecordField, RecordGenericParam, RecordLitField, ReturnStmt, StateRule,
    Statement, TypeArg, TypeRef, WorkflowCall, WorkflowCallArg, WorkflowDecl, WorkflowStep,
};
use crate::error::{Diagnostic, Span};
use crate::token::{Token, TokenKind};

pub fn parse(tokens: &[Token]) -> Result<Program, Diagnostic> {
    Parser::new(tokens).parse_program()
}

struct Parser<'a> {
    tokens: &'a [Token],
    index: usize,
}

impl<'a> Parser<'a> {
    fn new(tokens: &'a [Token]) -> Self {
        Self { tokens, index: 0 }
    }

    fn parse_program(mut self) -> Result<Program, Diagnostic> {
        let mut items = Vec::new();
        while !self.at_eof() {
            let item = if self.at_kw_cap() {
                Item::Capability(self.parse_capability_decl()?)
            } else if self.at_kw_fn() {
                Item::Function(self.parse_function_decl()?)
            } else if self.at_kw_workflow() {
                Item::Workflow(self.parse_workflow_decl()?)
            } else if self.at_kw_agent() {
                Item::Agent(self.parse_agent_decl()?)
            } else if self.at_kw_record() {
                Item::Record(self.parse_record_decl()?)
            } else {
                return Err(Diagnostic::error(
                    format!(
                        "expected top-level declaration, found {}",
                        self.current_kind_name()
                    ),
                    self.current().span,
                ));
            };
            items.push(item);
        }

        Ok(Program { items })
    }

    fn parse_capability_decl(&mut self) -> Result<CapabilityDecl, Diagnostic> {
        let start = self.expect_kw_cap()?.start;
        let capability = self.parse_type_ref()?;
        let end = self.expect_semicolon()?.end;
        Ok(CapabilityDecl {
            capability,
            span: Span::new(start, end),
        })
    }

    fn parse_record_decl(&mut self) -> Result<RecordDecl, Diagnostic> {
        let start = self.expect_kw_record()?.start;
        let (name, _) = self.expect_ident()?;

        let mut generics = Vec::new();
        if self.at_langle() {
            self.expect_langle()?;
            if !self.at_rangle() {
                loop {
                    let (generic_name, _) = self.expect_ident()?;
                    let bounds = if self.at_colon() {
                        self.expect_colon()?;
                        let mut bounds = Vec::new();
                        bounds.push(self.parse_type_ref()?);
                        while self.at_plus() {
                            self.expect_plus()?;
                            bounds.push(self.parse_type_ref()?);
                        }
                        bounds
                    } else {
                        Vec::new()
                    };
                    generics.push(RecordGenericParam {
                        name: generic_name,
                        bounds,
                    });
                    if self.at_comma() {
                        self.advance();
                        continue;
                    }
                    break;
                }
            }
            self.expect_rangle()?;
        }

        if self.at_kw_where() {
            if generics.is_empty() {
                return Err(Diagnostic::error(
                    format!(
                        "record '{}' uses where clause without generic parameters",
                        name
                    ),
                    self.current().span,
                ));
            }

            self.expect_kw_where()?;
            loop {
                let (param_name, param_span) = self.expect_ident()?;
                self.expect_colon()?;
                let mut bounds = Vec::new();
                bounds.push(self.parse_type_ref()?);
                while self.at_plus() {
                    self.expect_plus()?;
                    bounds.push(self.parse_type_ref()?);
                }

                let Some(param) = generics.iter_mut().find(|param| param.name == param_name) else {
                    return Err(Diagnostic::error(
                        format!(
                            "record '{}' where clause references unknown generic parameter '{}'",
                            name, param_name
                        ),
                        param_span,
                    ));
                };
                param.bounds.extend(bounds);

                if self.at_comma() {
                    self.advance();
                    if self.at_lbrace() {
                        break;
                    }
                    continue;
                }
                break;
            }
        }

        self.expect_lbrace()?;

        let mut fields = Vec::new();
        while !self.at_rbrace() {
            let (field_name, _) = self.expect_ident()?;
            self.expect_colon()?;
            let field_type = self.parse_type_ref()?;
            self.expect_semicolon()?;
            fields.push(RecordField {
                name: field_name,
                ty: field_type,
            });
        }

        self.expect_rbrace()?;
        let end = self.expect_semicolon()?.end;

        Ok(RecordDecl {
            name,
            generics,
            fields,
            span: Span::new(start, end),
        })
    }

    fn parse_function_decl(&mut self) -> Result<FunctionDecl, Diagnostic> {
        let start = self.expect_kw_fn()?.start;
        let (name, _) = self.expect_ident()?;

        self.expect_lparen()?;
        let mut params = Vec::new();
        if !self.at_rparen() {
            loop {
                params.push(self.parse_param()?);
                if self.at_comma() {
                    self.advance();
                    continue;
                }
                break;
            }
        }
        self.expect_rparen()?;

        self.expect_arrow()?;
        let return_type = self.parse_type_ref()?;

        let intent = if self.at_kw_intent() {
            self.parse_intent()?
        } else {
            None
        };

        let effects = if self.at_bang() {
            self.parse_effects()?
        } else {
            Vec::new()
        };

        let requires = if self.at_kw_requires() {
            self.parse_requires()?
        } else {
            Vec::new()
        };

        let ensures = if self.at_kw_ensures() {
            self.parse_ensures()?
        } else {
            Vec::new()
        };

        let failure = if self.at_kw_failure() {
            Some(self.parse_failure()?)
        } else {
            None
        };

        let evidence = if self.at_kw_evidence() {
            Some(self.parse_evidence()?)
        } else {
            None
        };

        let body = if self.at_lbrace() {
            Some(self.parse_block()?)
        } else {
            None
        };

        let end = self.expect_semicolon()?.end;

        Ok(FunctionDecl {
            name,
            params,
            return_type,
            intent,
            effects,
            requires,
            ensures,
            failure,
            evidence,
            body,
            span: Span::new(start, end),
        })
    }

    fn parse_workflow_decl(&mut self) -> Result<WorkflowDecl, Diagnostic> {
        let start = self.expect_kw_workflow()?.start;
        let (name, _) = self.expect_ident()?;

        self.expect_lparen()?;
        let mut params = Vec::new();
        if !self.at_rparen() {
            loop {
                params.push(self.parse_param()?);
                if self.at_comma() {
                    self.advance();
                    continue;
                }
                break;
            }
        }
        self.expect_rparen()?;

        self.expect_arrow()?;
        let return_type = self.parse_type_ref()?;

        let intent = if self.at_kw_intent() {
            self.parse_intent()?
        } else {
            None
        };

        let requires = if self.at_kw_requires() {
            self.parse_requires()?
        } else {
            Vec::new()
        };

        let steps = self.parse_steps_block()?;

        let output = if self.at_kw_output() {
            self.parse_output_block()?
        } else {
            Vec::new()
        };

        let evidence = if self.at_kw_evidence() {
            Some(self.parse_evidence()?)
        } else {
            None
        };

        let end = self.expect_semicolon()?.end;

        Ok(WorkflowDecl {
            name,
            params,
            return_type,
            intent,
            requires,
            steps,
            output,
            evidence,
            span: Span::new(start, end),
        })
    }

    fn parse_agent_decl(&mut self) -> Result<AgentDecl, Diagnostic> {
        let start = self.expect_kw_agent()?.start;
        let (name, _) = self.expect_ident()?;

        self.expect_lparen()?;
        let mut params = Vec::new();
        if !self.at_rparen() {
            loop {
                params.push(self.parse_param()?);
                if self.at_comma() {
                    self.advance();
                    continue;
                }
                break;
            }
        }
        self.expect_rparen()?;

        self.expect_arrow()?;
        let return_type = self.parse_type_ref()?;

        let intent = if self.at_kw_intent() {
            self.parse_intent()?
        } else {
            None
        };

        let state_rules = self.parse_state_block()?;
        let policy = self.parse_policy_block()?;

        let requires = if self.at_kw_requires() {
            self.parse_requires()?
        } else {
            Vec::new()
        };

        let loop_spec = self.parse_loop_block()?;

        let ensures = if self.at_kw_ensures() {
            self.parse_ensures()?
        } else {
            Vec::new()
        };

        let evidence = if self.at_kw_evidence() {
            Some(self.parse_evidence()?)
        } else {
            None
        };

        let end = self.expect_semicolon()?.end;

        Ok(AgentDecl {
            name,
            params,
            return_type,
            intent,
            state_rules,
            policy,
            requires,
            loop_spec,
            ensures,
            evidence,
            span: Span::new(start, end),
        })
    }

    fn parse_intent(&mut self) -> Result<Option<String>, Diagnostic> {
        self.expect_kw_intent()?;
        let Some(intent) = self.take_string() else {
            return Err(Diagnostic::error(
                "expected string literal after 'intent'",
                self.current().span,
            ));
        };
        Ok(Some(intent))
    }

    fn parse_param(&mut self) -> Result<Param, Diagnostic> {
        let (name, _) = self.expect_ident()?;
        self.expect_colon()?;
        let ty = self.parse_type_ref()?;
        Ok(Param { name, ty })
    }

    fn parse_effects(&mut self) -> Result<Vec<EffectSpec>, Diagnostic> {
        self.expect_bang()?;
        self.expect_lbrace()?;
        let mut effects = Vec::new();

        if !self.at_rbrace() {
            loop {
                let (name, _) = self.expect_ident()?;
                let argument = if self.at_lparen() {
                    self.expect_lparen()?;
                    let value = if let Some(value) = self.take_ident() {
                        value
                    } else if let Some(value) = self.take_string() {
                        value
                    } else if let Some(value) = self.take_number() {
                        value
                    } else {
                        return Err(Diagnostic::error(
                            "expected effect argument",
                            self.current().span,
                        ));
                    };
                    self.expect_rparen()?;
                    Some(value)
                } else {
                    None
                };
                effects.push(EffectSpec { name, argument });

                if self.at_comma() {
                    self.advance();
                    continue;
                }
                break;
            }
        }

        self.expect_rbrace()?;
        Ok(effects)
    }

    fn parse_requires(&mut self) -> Result<Vec<TypeRef>, Diagnostic> {
        self.expect_kw_requires()?;
        self.expect_lbracket()?;
        let mut required = Vec::new();

        if !self.at_rbracket() {
            loop {
                required.push(self.parse_type_ref()?);
                if self.at_comma() {
                    self.advance();
                    continue;
                }
                break;
            }
        }

        self.expect_rbracket()?;
        Ok(required)
    }

    fn parse_ensures(&mut self) -> Result<Vec<EnsureClause>, Diagnostic> {
        self.expect_kw_ensures()?;
        self.expect_lbracket()?;
        let mut ensures = Vec::new();

        if !self.at_rbracket() {
            loop {
                ensures.push(self.parse_ensure_clause()?);
                if self.at_comma() {
                    self.advance();
                    continue;
                }
                break;
            }
        }

        self.expect_rbracket()?;
        Ok(ensures)
    }

    fn parse_failure(&mut self) -> Result<FailurePolicy, Diagnostic> {
        self.expect_kw_failure()?;
        self.expect_lbrace()?;
        let mut rules = Vec::new();

        while !self.at_rbrace() {
            rules.push(self.parse_failure_rule()?);
        }

        self.expect_rbrace()?;
        Ok(FailurePolicy { rules })
    }

    fn parse_failure_rule(&mut self) -> Result<FailureRule, Diagnostic> {
        let (condition, _) = self.expect_ident()?;
        self.expect_arrow()?;
        let action = self.parse_failure_action()?;
        self.expect_semicolon()?;
        Ok(FailureRule { condition, action })
    }

    fn parse_failure_action(&mut self) -> Result<FailureAction, Diagnostic> {
        let (name, _) = self.expect_ident()?;
        self.expect_lparen()?;
        let mut args = Vec::new();

        if !self.at_rparen() {
            loop {
                args.push(self.parse_failure_action_arg()?);
                if self.at_comma() {
                    self.advance();
                    continue;
                }
                break;
            }
        }

        self.expect_rparen()?;
        Ok(FailureAction { name, args })
    }

    fn parse_failure_action_arg(&mut self) -> Result<FailureActionArg, Diagnostic> {
        if self.at_ident() && self.peek_kind_is_eq() {
            let (key, _) = self.expect_ident()?;
            self.expect_eq()?;
            let value = self.parse_failure_value()?;
            return Ok(FailureActionArg {
                key: Some(key),
                value,
            });
        }

        let value = self.parse_failure_value()?;
        Ok(FailureActionArg { key: None, value })
    }

    fn parse_failure_value(&mut self) -> Result<FailureValue, Diagnostic> {
        if let Some(value) = self.take_ident() {
            return Ok(FailureValue::Ident(value));
        }
        if let Some(value) = self.take_string() {
            return Ok(FailureValue::String(value));
        }
        if let Some(value) = self.take_number() {
            return Ok(FailureValue::Number(value));
        }

        Err(Diagnostic::error(
            "expected failure action argument",
            self.current().span,
        ))
    }

    fn parse_evidence(&mut self) -> Result<EvidenceSpec, Diagnostic> {
        self.expect_kw_evidence()?;
        self.expect_lbrace()?;

        let mut trace = None;
        let mut metrics = Vec::new();

        while !self.at_rbrace() {
            if self.at_kw_trace() {
                self.expect_kw_trace()?;
                let Some(value) = self.take_string() else {
                    return Err(Diagnostic::error(
                        "expected string literal after 'trace'",
                        self.current().span,
                    ));
                };
                trace = Some(value);
                self.expect_semicolon()?;
                continue;
            }

            if self.at_kw_metrics() {
                self.expect_kw_metrics()?;
                self.expect_lbracket()?;
                metrics = self.parse_identifier_list()?;
                self.expect_rbracket()?;
                self.expect_semicolon()?;
                continue;
            }

            return Err(Diagnostic::error(
                format!(
                    "expected 'trace' or 'metrics' in evidence block, found {}",
                    self.current_kind_name()
                ),
                self.current().span,
            ));
        }

        self.expect_rbrace()?;
        Ok(EvidenceSpec { trace, metrics })
    }

    fn parse_steps_block(&mut self) -> Result<Vec<WorkflowStep>, Diagnostic> {
        self.expect_kw_steps()?;
        self.expect_lbrace()?;

        let mut steps = Vec::new();
        while !self.at_rbrace() {
            steps.push(self.parse_workflow_step()?);
        }

        self.expect_rbrace()?;
        Ok(steps)
    }

    fn parse_workflow_step(&mut self) -> Result<WorkflowStep, Diagnostic> {
        let (id, _) = self.expect_ident()?;
        self.expect_colon()?;
        let call = self.parse_workflow_call()?;

        let ensures = if self.at_kw_ensures() {
            self.parse_ensures()?
        } else {
            Vec::new()
        };

        let on_fail = if self.at_kw_on_fail() {
            self.expect_kw_on_fail()?;
            self.expect_arrow()?;
            Some(self.parse_failure_action()?)
        } else {
            None
        };

        self.expect_semicolon()?;
        Ok(WorkflowStep {
            id,
            call,
            ensures,
            on_fail,
        })
    }

    fn parse_workflow_call(&mut self) -> Result<WorkflowCall, Diagnostic> {
        let (target, _) = self.expect_ident()?;
        self.expect_lparen()?;

        let mut args = Vec::new();
        if !self.at_rparen() {
            loop {
                args.push(self.parse_workflow_call_arg()?);
                if self.at_comma() {
                    self.advance();
                    continue;
                }
                break;
            }
        }

        self.expect_rparen()?;
        Ok(WorkflowCall { target, args })
    }

    fn parse_workflow_call_arg(&mut self) -> Result<WorkflowCallArg, Diagnostic> {
        if let Some(value) = self.take_string() {
            return Ok(WorkflowCallArg::String(value));
        }
        if let Some(value) = self.take_number() {
            return Ok(WorkflowCallArg::Number(value));
        }
        if self.at_ident() {
            return Ok(WorkflowCallArg::Path(self.parse_symbol_path()?));
        }

        Err(Diagnostic::error(
            "expected workflow step argument",
            self.current().span,
        ))
    }

    fn parse_state_block(&mut self) -> Result<Vec<StateRule>, Diagnostic> {
        self.expect_kw_state()?;
        self.expect_lbrace()?;

        let mut rules = Vec::new();
        while !self.at_rbrace() {
            let from = if self.at_kw_any() {
                self.expect_kw_any()?;
                "any".to_string()
            } else {
                let (value, _) = self.expect_ident()?;
                value
            };

            self.expect_arrow()?;

            let mut to = Vec::new();
            loop {
                let (state, _) = self.expect_ident()?;
                to.push(state);
                if self.at_comma() {
                    self.advance();
                    continue;
                }
                break;
            }

            self.expect_semicolon()?;
            rules.push(StateRule { from, to });
        }

        self.expect_rbrace()?;
        Ok(rules)
    }

    fn parse_policy_block(&mut self) -> Result<AgentPolicy, Diagnostic> {
        self.expect_kw_policy()?;
        self.expect_lbrace()?;

        let mut allow_tools = Vec::new();
        let mut deny_tools = Vec::new();
        let mut max_iterations = None;
        let mut human_in_loop_when = None;

        while !self.at_rbrace() {
            if self.at_kw_allow_tools() {
                self.expect_kw_allow_tools()?;
                self.expect_lbracket()?;
                allow_tools = self.parse_string_list()?;
                self.expect_rbracket()?;
                self.expect_semicolon()?;
                continue;
            }

            if self.at_kw_deny_tools() {
                self.expect_kw_deny_tools()?;
                self.expect_lbracket()?;
                deny_tools = self.parse_string_list()?;
                self.expect_rbracket()?;
                self.expect_semicolon()?;
                continue;
            }

            if self.at_kw_max_iterations() {
                self.expect_kw_max_iterations()?;
                self.expect_eq()?;
                let Some(value) = self.take_number() else {
                    return Err(Diagnostic::error(
                        "expected number after 'max_iterations ='",
                        self.current().span,
                    ));
                };
                max_iterations = Some(value);
                self.expect_semicolon()?;
                continue;
            }

            if self.at_kw_human_in_loop() {
                self.expect_kw_human_in_loop()?;
                self.expect_kw_when()?;
                human_in_loop_when = Some(self.parse_ensure_clause()?);
                self.expect_semicolon()?;
                continue;
            }

            return Err(Diagnostic::error(
                format!(
                    "expected policy clause in agent policy block, found {}",
                    self.current_kind_name()
                ),
                self.current().span,
            ));
        }

        self.expect_rbrace()?;
        Ok(AgentPolicy {
            allow_tools,
            deny_tools,
            max_iterations,
            human_in_loop_when,
        })
    }

    fn parse_loop_block(&mut self) -> Result<LoopSpec, Diagnostic> {
        self.expect_kw_loop()?;
        self.expect_lbrace()?;

        let mut stages = Vec::new();
        let (first_stage, _) = self.expect_ident()?;
        stages.push(first_stage);
        while self.at_arrow() {
            self.expect_arrow()?;
            let (stage, _) = self.expect_ident()?;
            stages.push(stage);
        }
        self.expect_semicolon()?;

        self.expect_kw_stop()?;
        self.expect_kw_when()?;
        let stop_when = self.parse_ensure_clause()?;
        self.expect_semicolon()?;

        self.expect_rbrace()?;
        Ok(LoopSpec { stages, stop_when })
    }

    fn parse_output_block(&mut self) -> Result<Vec<OutputField>, Diagnostic> {
        self.expect_kw_output()?;
        self.expect_lbrace()?;

        let mut fields = Vec::new();
        while !self.at_rbrace() {
            let (name, _) = self.expect_ident()?;
            self.expect_colon()?;
            let ty = self.parse_type_ref()?;
            let source = if self.at_eq() {
                self.expect_eq()?;
                Some(self.parse_symbol_path()?)
            } else {
                None
            };
            self.expect_semicolon()?;
            fields.push(OutputField { name, ty, source });
        }

        self.expect_rbrace()?;
        Ok(fields)
    }

    fn parse_symbol_path(&mut self) -> Result<Vec<String>, Diagnostic> {
        let (head, _) = self.expect_ident()?;
        let mut segments = vec![head];
        while self.at_dot() {
            self.advance();
            let (segment, _) = self.expect_ident()?;
            segments.push(segment);
        }
        Ok(segments)
    }

    fn parse_identifier_list(&mut self) -> Result<Vec<String>, Diagnostic> {
        let mut items = Vec::new();
        if self.at_rbracket() {
            return Ok(items);
        }

        loop {
            let (ident, _) = self.expect_ident()?;
            items.push(ident);
            if self.at_comma() {
                self.advance();
                continue;
            }
            break;
        }

        Ok(items)
    }

    fn parse_string_list(&mut self) -> Result<Vec<String>, Diagnostic> {
        let mut items = Vec::new();
        if self.at_rbracket() {
            return Ok(items);
        }

        loop {
            let Some(value) = self.take_string() else {
                return Err(Diagnostic::error(
                    "expected string literal",
                    self.current().span,
                ));
            };
            items.push(value);
            if self.at_comma() {
                self.advance();
                continue;
            }
            break;
        }

        Ok(items)
    }

    fn parse_ensure_clause(&mut self) -> Result<EnsureClause, Diagnostic> {
        let left = self.parse_predicate_value()?;
        let op = self.parse_predicate_op()?;
        let right = self.parse_predicate_value()?;
        Ok(EnsureClause { left, op, right })
    }

    fn parse_predicate_value(&mut self) -> Result<PredicateValue, Diagnostic> {
        if let Some(value) = self.take_string() {
            return Ok(PredicateValue::String(value));
        }
        if let Some(value) = self.take_number() {
            return Ok(PredicateValue::Number(value));
        }
        if self.at_ident() || self.at_kw_output() || self.at_kw_state() {
            let mut segments = Vec::new();
            if self.at_kw_output() {
                self.expect_kw_output()?;
                segments.push("output".to_string());
            } else if self.at_kw_state() {
                self.expect_kw_state()?;
                segments.push("state".to_string());
            } else {
                let (head, _) = self.expect_ident()?;
                segments.push(head);
            }
            while self.at_dot() {
                self.advance();
                let (segment, _) = self.expect_ident()?;
                segments.push(segment);
            }
            return Ok(PredicateValue::Path(segments));
        }

        Err(Diagnostic::error(
            "expected predicate value",
            self.current().span,
        ))
    }

    fn parse_predicate_op(&mut self) -> Result<PredicateOp, Diagnostic> {
        let op = if self.at_eqeq() {
            PredicateOp::Eq
        } else if self.at_noteq() {
            PredicateOp::NotEq
        } else if self.at_lte() {
            PredicateOp::Lte
        } else if self.at_gte() {
            PredicateOp::Gte
        } else if self.at_langle() {
            PredicateOp::Lt
        } else if self.at_rangle() {
            PredicateOp::Gt
        } else if self.at_kw_in() {
            PredicateOp::In
        } else {
            return Err(Diagnostic::error(
                "expected predicate operator",
                self.current().span,
            ));
        };
        self.advance();
        Ok(op)
    }

    fn parse_type_ref(&mut self) -> Result<TypeRef, Diagnostic> {
        let (name, _) = self.expect_ident()?;
        let mut args = Vec::new();

        if self.at_langle() {
            self.expect_langle()?;
            if !self.at_rangle() {
                loop {
                    args.push(self.parse_type_arg()?);
                    if self.at_comma() {
                        self.advance();
                        continue;
                    }
                    break;
                }
            }
            self.expect_rangle()?;
        }

        Ok(TypeRef { name, args })
    }

    fn parse_type_arg(&mut self) -> Result<TypeArg, Diagnostic> {
        if let Some(value) = self.take_string() {
            return Ok(TypeArg::String(value));
        }
        if let Some(value) = self.take_number() {
            return Ok(TypeArg::Number(value));
        }
        if self.at_ident() {
            return Ok(TypeArg::Type(self.parse_type_ref()?));
        }

        Err(Diagnostic::error(
            "expected type argument",
            self.current().span,
        ))
    }

    fn parse_block(&mut self) -> Result<Block, Diagnostic> {
        self.expect_lbrace()?;
        let mut statements = Vec::new();
        let mut tail = None;

        while !self.at_rbrace() {
            if self.at_kw_let() {
                statements.push(Statement::Let(self.parse_let_stmt()?));
                self.expect_semicolon()?;
                continue;
            }

            if self.at_ident() && self.peek_kind_is_eq() {
                statements.push(Statement::Assign(self.parse_assign_stmt()?));
                self.expect_semicolon()?;
                continue;
            }

            if self.at_kw_return() {
                statements.push(Statement::Return(self.parse_return_stmt()?));
                self.expect_semicolon()?;
                continue;
            }

            let expr = self.parse_expr()?;
            if self.at_semicolon() {
                self.advance();
                statements.push(Statement::Expr(expr));
                continue;
            }

            tail = Some(expr);
            break;
        }

        self.expect_rbrace()?;
        Ok(Block { statements, tail })
    }

    fn parse_let_stmt(&mut self) -> Result<LetStmt, Diagnostic> {
        self.expect_kw_let()?;
        let (name, _) = self.expect_ident()?;

        let ty = if self.at_colon() {
            self.advance();
            Some(self.parse_type_ref()?)
        } else {
            None
        };

        self.expect_eq()?;
        let value = self.parse_expr()?;

        Ok(LetStmt { name, ty, value })
    }

    fn parse_assign_stmt(&mut self) -> Result<AssignStmt, Diagnostic> {
        let Some(name) = self.take_ident() else {
            return Err(Diagnostic::error(
                format!("expected identifier, found {}", self.current_kind_name()),
                self.current().span,
            ));
        };

        self.expect_eq()?;
        let value = self.parse_expr()?;

        Ok(AssignStmt { name, value })
    }

    fn parse_return_stmt(&mut self) -> Result<ReturnStmt, Diagnostic> {
        self.expect_kw_return()?;
        let value = if self.at_semicolon() {
            None
        } else {
            Some(self.parse_expr()?)
        };
        Ok(ReturnStmt { value })
    }

    fn parse_expr(&mut self) -> Result<Expr, Diagnostic> {
        self.parse_equality_expr()
    }

    fn parse_equality_expr(&mut self) -> Result<Expr, Diagnostic> {
        let mut expr = self.parse_add_expr()?;
        loop {
            let op = if self.at_eqeq() {
                self.advance();
                BinaryOp::Eq
            } else if self.at_noteq() {
                self.advance();
                BinaryOp::NotEq
            } else {
                break;
            };

            let right = self.parse_add_expr()?;
            expr = Expr::Binary {
                op,
                left: Box::new(expr),
                right: Box::new(right),
            };
        }
        Ok(expr)
    }

    fn parse_add_expr(&mut self) -> Result<Expr, Diagnostic> {
        let mut expr = self.parse_primary_expr()?;
        while self.at_plus() {
            self.advance();
            let right = self.parse_primary_expr()?;
            expr = Expr::Binary {
                op: BinaryOp::Add,
                left: Box::new(expr),
                right: Box::new(right),
            };
        }
        Ok(expr)
    }

    fn parse_primary_expr(&mut self) -> Result<Expr, Diagnostic> {
        if self.at_lparen() {
            self.advance();
            let expr = self.parse_expr()?;
            self.expect_rparen()?;
            return Ok(expr);
        }

        if self.at_kw_if() {
            return self.parse_if_expr();
        }

        if self.at_kw_while() {
            return self.parse_while_expr();
        }

        if let Some(value) = self.take_number() {
            return Ok(Expr::Number(value));
        }

        if let Some(value) = self.take_string() {
            return Ok(Expr::String(value));
        }

        if self.at_kw_true() {
            self.advance();
            return Ok(Expr::Bool(true));
        }
